--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ body, html {
     align-items: center;
 }
 
-#quoteDisplay {
+#motivationalQuote {
     text-align: center;
     margin-bottom: 20px; /* Adjust the space between the quote and the button */
 }
 
-#quoteButton {
+#button {
     position: absolute;
     bottom: 50px; /* Adjust the distance of the button from the bottom */
 }
